添加 supervisor 方式后台启动

--- a/celery_back.conf
+++ b/celery_back.conf
@@ -1,16 +1,35 @@
-[program:celeryworker]
-# 这个是进程的名字，随意起
-command=bash celery_back.sh;
-# 要运行的命令
-directory=/home/horsun/Desktop/celery_test;
-# 运行命令的目录
+[program:celery_worker]
+# 命令
+command=/home/horsun/anaconda3/envs/tuobabaAPP/bin/celery -A Lyonline worker -l info
+# 命令运行路径
+directory=/home/horsun/celery_test
+# 用户名
+user=horsun
 
-numprocs=1;
-# 设置log的路径
-stdout_logfile=/var/log/supervisor/celeryworker.log;
-stderr_logfile=/var/log/supervisor/celeryworker.log;
-autostart=true;
-autorestart=true;
-startsecs=10;
-stopwaitsecs = 600;
-priority=15;
+numprocs=1
+# log输出
+stdout_logfile=/home/horsun/celery_test/out.log
+# 将 stderr 的日志会写入 stdout 日志文件中
+redirect_stderr=true
+# 启动和重启
+autostart=true
+autorestart=true
+# 进程启动 10s 后，状态为 running 则为启动成功
+startsecs=10
+stopwaitsecs = 600
+killasgroup=true
+# 优先级
+priority=998
+# 停止信号
+stopsignal=QUIT
+
+
+###################
+#sudo apt install supervisor  或者yum install supervisor
+#sudo cp ./celery_back.conf  /etc/supervisor/conf.d
+#$ sudo supervisorctl reread
+#$ sudo supervisorctl update
+#$ sudo supervisorctl start celery_worker   还有/restart/ stop /
+#$ sudo supervisorctl status
+#wfstar_worker                    RUNNING   pid 16751, uptime 0:00:34
+###################
