add remove task example

--- a/celery_back.conf
+++ b/celery_back.conf
@@ -1,14 +1,14 @@
-[program:celery_worker]
+[program:celery_test]
 # 命令
-command=/home/horsun/anaconda3/envs/tuobabaAPP/bin/celery -A Lyonline worker -l info
+command=/home/horsun/anaconda3/envs/tuobabaAPP/bin/celery -A local worker -l info
 # 命令运行路径
-directory=/home/horsun/celery_test
+directory=/home/horsun/Desktop/celery_test
 # 用户名
 user=horsun
 
 numprocs=1
 # log输出
-stdout_logfile=/home/horsun/celery_test/out.log
+stdout_logfile=/home/horsun/Desktop/celery_test/out.log
 # 将 stderr 的日志会写入 stdout 日志文件中
 redirect_stderr=true
 # 启动和重启
