--- a/celery_back.conf
+++ b/celery_back.conf
@@ -1,4 +1,4 @@
-[program:celery_test]
+[program:local]
 # 命令
 command=/home/horsun/anaconda3/envs/tuobabaAPP/bin/celery -A local worker -l info
 # 命令运行路径
